add table && front page && controller

--- a/apps/backend/composer.json
+++ b/apps/backend/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "test-url-shortener",
+    "name": "test-url-shortener/test-url-shortener",
     "description": "test-url-shortener",
     "minimum-stability": "dev",
     "type": "project",
