--- a/containers/nginx/local/conf.d/default.conf
+++ b/containers/nginx/local/conf.d/default.conf
@@ -21,6 +21,19 @@ server {
     }
 
     location / {
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+            add_header 'Access-Control-Max-Age' 1728000;
+
+
+            add_header 'Content-Type' 'text/plain charset=UTF-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+
         try_files $uri $uri/ /index.php?_url=$uri&$args;
     }
 
@@ -36,4 +49,12 @@ server {
         fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
+}
+
+
+server {
+    listen 8081 default_server;
+    server_name localhost;
+
+    root /var/frontend;
 }
