--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,10 @@ services:
           context: ./containers/nginx
       ports:
           - 8080:8080
+          - 8081:8081
       volumes:
           - ./logs/nginx:/etc/logs/nginx
+          - ./apps/frontend/:/var/frontend
       volumes_from:
           - backend
       environment:
