add front service

--- a/containers/nginx_backend/local/conf.d/default.conf
+++ b/containers/nginx_backend/local/conf.d/default.conf
@@ -1,5 +1,5 @@
 server {
-    listen 8081 default_server;
+    listen 8080;
     server_name localhost;
 
     index index.php index.html;
@@ -15,10 +15,6 @@ server {
     gzip_comp_level 5;
     gzip_disable "msie6";
     gzip_types text/css application/json application/javascript;
-
-    location ~* ^.+\.(jpg|jpeg|gif|png|ico|js|css)$ {
-        expires 30s;
-    }
 
     location / {
         try_files $uri $uri/ /index.php?_url=$uri&$args;
@@ -36,12 +32,4 @@ server {
         fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
-}
-
-
-server {
-    listen 8080 default_server;
-    server_name localhost;
-
-    root /var/frontend;
 }
