--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,32 +3,23 @@ services:
   postgres:
       container_name: t_postgres
       image: postgres:11.2
-      ports:
-          - 5432:5432
       volumes:
           - postgresvolume:/var/lib/postgresql/data
       environment:
           - POSTGRES_DB=test
           - POSTGRES_USER=test
           - POSTGRES_PASSWORD=TWq6zVfy6WejdJ3THMJS
-  nginx:
-      container_name: t_nginx
+  nginx_backend:
+      container_name: t_nginx_backend
       build:
           dockerfile: ./Dockerfile
           args:
             - ENVIRONMENT=local
-          context: ./containers/nginx
-      ports:
-          - 8080:8080
-          - 8081:8081
+          context: containers/nginx_backend
       volumes:
           - ./logs/nginx:/etc/logs/nginx
-          - ./apps/frontend/:/var/frontend
       volumes_from:
           - backend
-      environment:
-          - NGINX_HOST=localhost
-          - NGINX_PORT=80
       links:
           - backend
   backend:
@@ -37,8 +28,36 @@ services:
           dockerfile: ./Dockerfile
           context: ./containers/backend
           args:
-          - ENVIRONMENT=local
+              - ENVIRONMENT=local
       volumes:
           - ./apps/backend/:/var/www
+      links:
+          - postgres
+  nginx_frontend:
+      container_name: t_nginx_front
+      build:
+          dockerfile: ./Dockerfile
+          args:
+              - ENVIRONMENT=local
+          context: containers/nginx_frontend
+      ports:
+          - 8080:8080
+      volumes:
+          - ./logs/nginx:/etc/logs/nginx
+      volumes_from:
+          - frontend
+      links:
+          - frontend
+  frontend:
+      container_name: t_frontend
+      build:
+          dockerfile: ./Dockerfile
+          context: ./containers/frontend
+          args:
+              - ENVIRONMENT=local
+      volumes:
+          - ./apps/frontend/:/var/www
+      links:
+          - nginx_backend
 volumes:
   postgresvolume:
